# dapps-smart-contract-academy

./: .gitignore  README.md
.github/workflows/: contracts.yml  frontend.yml
contracts/: .gitignore  Cargo.toml
contracts/1-hello-world/: .binpath  Cargo.toml  build.rs
contracts/1-hello-world/hello-world-io/: Cargo.toml
contracts/1-hello-world/hello-world-io/src/: lib.rs
contracts/1-hello-world/io/: Cargo.toml
contracts/1-hello-world/src/: lib.rs
contracts/1-hello-world/tests/: hello_world_test.rs
contracts/2-escrow/: .binpath  .metahash  Cargo.toml  build.rs  escrow.meta.txt
contracts/2-escrow/io/: Cargo.toml
contracts/2-escrow/io/src/: lib.rs
contracts/2-escrow/src/: lib.rs
contracts/2-escrow/state/: Cargo.toml
contracts/2-escrow/state/src/: lib.rs
contracts/2-escrow/tests/: escrow_test.rs
contracts/4-store/: .binpath  Cargo.toml  build.rs
contracts/4-store/io/: Cargo.toml
contracts/4-store/src/: lib.rs
contracts/5-auction/: .binpath  Cargo.toml
contracts/5-auction/io/: Cargo.toml
contracts/5-auction/io/src/: lib.rs
contracts/5-auction/src/: lib.rs
contracts/6-program-factory/: .binpath  Cargo.toml
contracts/6-program-factory/escrow/: .binpath  Cargo.toml
contracts/6-program-factory/escrow/io/: Cargo.toml
contracts/6-program-factory/escrow/io/src/: lib.rs
contracts/6-program-factory/escrow/src/: lib.rs
contracts/6-program-factory/escrow/tests/: escrow_test.rs
contracts/6-program-factory/src/: lib.rs
contracts/6-program-factory/tests/: factory_test.rs
contracts/7-battle/: .metahash  Cargo.toml  battle.meta.txt  build.rs
contracts/7-battle/io/: Cargo.toml
contracts/7-battle/io/src/: lib.rs
contracts/7-battle/src/: lib.rs
contracts/tmg-io/: Cargo.toml
contracts/tmg-io/src/: lib.rs
contracts/upload-contracts/: transactions.yaml
contracts/upload-contracts/programs/: ft_logic.opt.wasm  ft_main.opt.wasm  ft_storage.opt.wasm  store.opt.wasm
frontend/: .env.example  .gitignore  README.md  package.json  tsconfig.json  vite.config.ts
frontend/src/: App.tsx  app.tsx
frontend/src/app/context/: ctx-ft-balance.tsx  ctx-lesson.tsx
frontend/src/app/hooks/: use-ft-balance.ts  use-read-wasm-state.ts  use-tamagotchi.ts
frontend/src/app/utils/: index.ts
frontend/src/components/cards/store-item-card/: store-item-card.tsx
frontend/src/components/common/accounts-list/: accounts-list.tsx
frontend/src/components/common/connect-account/: connect-account.tsx
frontend/src/components/forms/create-tamagotchi-form/: create-tamagotchi-form.tsx
frontend/src/components/menus/account-actions-menu/: account-actions-menu.tsx
frontend/src/components/popups/select-account-popup/: select-account-popup.tsx
frontend/src/components/sections/home-create-section/: home-create-section.tsx
frontend/src/components/tamagotchi/tamagotchi-avatar/: tamagotchi-avatar.tsx
frontend/src/components/tamagotchi/tamagotchi-battle-top-stats/: tamagotchi-battle-top-stats.tsx
frontend/src/components/tamagotchi/tamagotchi-info-card/: tamagotchi-info-card.tsx
frontend/src/components/ui/: scroll-area.tsx
frontend/src/pages/: battle.tsx  home.tsx  index.tsx  store.tsx
