[workspace]
resolver = "2"
members = [
    "1-hello-world",
    "1-hello-world/io",
    "2-escrow",
    "2-escrow/io",
    "2-escrow/state",
    "4-store",
    "4-store/io",
    "5-auction",
    "5-auction/io",
    "6-program-factory",
    "6-program-factory/escrow",
    "6-program-factory/escrow/io",
    "7-battle",
    "7-battle/io",
    "tmg-io"
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Gear Technologies"]
license = "MIT"

[workspace.dependencies]
auction-io = { path = "5-auction/io" }
battle-io = { path = "7-battle/io" }
blake2-rfc = { version = "0.2.18", default-features = false }
escrow-io = { path = "2-escrow/io" }
escrow-new-io = { path = "6-program-factory/escrow/io" }
ft-main-io = { git = "https://github.com/gear-dapps/sharded-fungible-token.git", tag = "2.1.2" }
gear-wasm-builder = { git = "https://github.com/gear-tech/gear.git", branch = "academy" }
gmeta = { git = "https://github.com/gear-tech/gear.git", branch = "academy" }
gtest = { git = "https://github.com/gear-tech/gear.git", branch = "academy" }
gstd = { git = "https://github.com/gear-tech/gear.git", rev = "78dfa07" }
hashbrown = "0.13"
hello-world-io = { path = "1-hello-world/io" }
parity-scale-codec = { version = "3", default-features = false }
scale-info = { version = "2", default-features = false }
store-io = { path = "4-store/io" }
subxt = { version = "0.27", default-features = false }
tmg-io = { path = "tmg-io" }
tokio = "1"
