[package]
name = "tamagotchi-auction"
version = "0.1.0"
edition = "2021"

[dependencies]
gstd = { git = "https://github.com/gear-tech/gear.git", features = ["debug"] , rev = "5c685d0f15c412ab6ee019ceaf7ce084426dfb68"  }
parity-scale-codec = { version = "3", default-features = false }
ft-main-io = { git = "https://github.com/gear-dapps/sharded-fungible-token.git", tag = "2.1.1" }
auction-io = { path = "io" }
tmg-io = { path = "../tmg-io" }

[build-dependencies]
gear-wasm-builder = { git = "https://github.com/gear-tech/gear.git", rev = "5c685d0f15c412ab6ee019ceaf7ce084426dfb68" }