[package]
name = "program-factory"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
gstd = { workspace = true, features = ["debug"] }
parity-scale-codec.workspace = true
scale-info.workspace = true
escrow-new-io.workspace = true

[build-dependencies]
gear-wasm-builder.workspace = true

[dev-dependencies]
gtest.workspace = true
