[package]
name = "battle"
version = "0.1.0"
edition = "2021"

[dependencies]
gstd = { git = "https://github.com/gear-tech/gear.git",features = ["debug"], branch = "testnet" }
parity-scale-codec = { version = "3", default-features = false }
battle-io = { path = "io" }
tmg-io = { path = "../tmg-io" }
store-io = {path = "../4-store/io" }
scale-info = { version = "2", default-features = false, features = ["derive"] }

[build-dependencies]
gear-wasm-builder = { git = "https://github.com/gear-tech/gear.git", branch = "testnet"}
battle-io = { path = "io" }