[package]
name = "battle"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
gstd = { workspace = true, features = ["debug"] }
parity-scale-codec.workspace = true
battle-io.workspace = true
tmg-io.workspace = true
store-io.workspace = true
scale-info.workspace = true

[build-dependencies]
gmeta.workspace = true
gear-wasm-builder.workspace = true
battle-io.workspace = true
