[package]
name = "battle-io"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
gstd = { workspace = true, features = ["debug"] }
parity-scale-codec.workspace = true
store-io.workspace = true
gmeta.workspace = true
scale-info.workspace = true
